--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +10,7 @@ body {
 }
 
 header {
-  padding: 20px;
+  /*padding: 50px;*/
 }
 
 button {
@@ -30,32 +31,98 @@ ul {
 }
 /*acomodacion de todo el menu*/
 .nav {
+  z-index: 2;
   justify-content: space-around;
-  position: fixed;
+  position: absolute;
   width: 100%;
 }
 /*estilo de los nav del menu*/
 .nav a {
   text-decoration: none;
-  font-family: "Playfair Display", regular;
-  color: white;
+  font-size: .90em;
+  font-family: 'Playfair Display', serif;
+  color: #dfdfdf;
 }
 /*margen entre cada uno de los elementos del menu*/
 .menu__item, .menu__icon {
-  margin: 0 20px;
+  margin: 0 10px;
+  padding: 5px 10px;
 }
-
+/*sombreado elementos menu*/
+.menu__item:hover{
+  background-color: #dfdfdf1a;
+  outline: 1px solid #EBD398;
+  border-radius: 20px;  
+}
+.menu__item:hover a{
+  color: #DF9146;
+}
 /*cambiar tamaño image ICONOS*/
 .menu__icon img {
-  height: 25px;   
+  height: 20px;   
 }
 /*espacio contenedor iconos respecto al menu2 y al borde derecho */
-.nav__icons {
-  padding-right: 30px;
-  padding-left: 10px;
-  
+.nav__icon {
+  /*padding-right: 100px;    */
 }
+                                              
 /*cambiar tamaño image LOGO*/
-.nav__logo img {
-  height: 90px;
+.nav__logo img {  
+  height: 85px;
 }
+.nav__logo {
+  padding-top: 50px;
+}
+
+.banner__img {
+  object-fit: cover;
+}
+
+.banner {
+  position: relative;  
+}
+
+.fondo__degrade {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  width: 88%;
+  top: 22%;
+  left: 10px;
+  margin: 0 5%;
+  height: 510px;    
+  display: flex;
+  border-radius: 120px 0 0 0;
+  outline: 1px solid #EBD398;
+  background: linear-gradient(90deg, rgba(21,11,1,1) 10%, rgba(21,11,1,0.8743872549019608) 45%, rgba(21,11,1,0.16010154061624648) 100%);
+}
+
+.text__details {
+  
+  margin-left: 10%;
+}
+
+h3 {
+  font-size: .75em;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  color: #EBD398;
+}
+
+h1 {
+  font-size: 4em;
+  font-family: 'Playfair Display', serif;
+  font-weight: 500;
+  color: #FFF;
+}
+
+.parrafo {
+  padding-top: 15px;
+  width: 45%;
+  font-size: 1em;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  color: #FFF;
+}
+
