--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ ul {
   outline: 1px solid #EBD398;
   background: linear-gradient(90deg, rgba(21,11,1,1) 10%, rgba(21,11,1,0.8743872549019608) 45%, rgba(21,11,1,0.16010154061624648) 100%);
 }
-h3 {
+h2 {
   font-size: .9em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
@@ -346,16 +346,14 @@ p {
   width: 100%;
   bottom: 0;
   transition: height 0.5s ease-out;
-  background: linear-gradient(0deg, rgba(235,211,152,0.48783263305322133) 0%, rgba(235,211,152,0.24413515406162467) 28%, rgba(235,211,152,0) 76%);
+  background: linear-gradient(0deg, rgba(95,45,18,1) 0%, rgba(95,45,18,0.3225665266106442) 28%, rgba(95,45,18,0) 85%);
 }
 .galery__item:hover img{
   transform: scale(1.2);
 }
-
 .galery__item:hover::before{
   height: 100%;  
 }
-
 .galery__nombre{
   z-index: 3;  
   position: absolute;
@@ -363,17 +361,44 @@ p {
   text-align: center;
   width: 100%;
   transition: bottom .5s ease;
-  font-size: 1em;
-  font-family: 'Playfair Display', serif;
+  font-size: 1.2em;
+  font-family: 'Open Sans', sans-serif;
+  font-weight:400;
   color:#EBD398;
+}
+.galery__item:hover h2{  
+  bottom: 8%;  
+}
+.section4 {  
+  margin-top: -590px;
+}
+.section4 img{
+  width: 100%;  
+}
+.section4 h1 {
+  font-size: 1.8em;  
+  font-family: 'Playfair Display', serif;
+  font-weight: 500;
+  color: #FFF;
+  width: 80%;
+}
+.section4 h2 {
+  width: 100%;
+}
+.section4 p {
+  width: 80%;
+  font-size: .9em; 
+}
+.section4__newsLetter{
+  position: absolute;
+  top: 30%;
+  height: 300px; 
+  width: 28%;   
+  margin: 0 35%;
+  padding: 45px 10px 60px 40px;    
+  outline: 1px solid #EBD398;  
 }
 
-.galery__item:hover h2{
-  font-size: 1em;
-  font-family: 'Playfair Display', serif;
-  bottom: 10%;
-  color:#EBD398;
-}
 
 
 
