--- a/styles.css
+++ b/styles.css
@@ -369,6 +369,30 @@ p {
 .galery__item:hover h2{  
   bottom: 8%;  
 }
+@media (min-width:820px){
+  .section3__galery{
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .galery__item:nth-child(1){
+    display: none;
+  }
+  .galery__item:nth-child(2){
+    display: none;
+  }
+  .section3--esquina1{
+    border-radius: 0 100px 0 0 ;
+  }
+  .section3--esquina2{
+    border-radius: 0  0 0 100px;
+  }
+  .section3--esquina3{
+    border-radius: 0 0 100px 0;
+  }
+  .section3--esquina4{
+    border-radius: 100px 0 0 0 ;
+  }
+
+}
 .section4 {  
   margin-top: -590px;
 }
