--- a/styles.css
+++ b/styles.css
@@ -68,15 +68,12 @@ ul {
   height: 20px;   
 }
 
-/*.banner {
-  position: relative;  
-}*/
 .banner__img {
   object-fit: cover;
   top: 20%;
 }
 .fondo__degrade {
-  display: flex;
+  /*display: flex;*/
   flex-direction: column;
   justify-content: center;
   position: absolute;
@@ -370,6 +367,101 @@ p {
   bottom: 8%;  
 }
 @media (min-width:820px){
+  body{
+    font-size: 0.8em;
+  }
+  h1{
+    font-size: 2.8em;
+  }
+  /*HEADER START*/
+  
+  /*HEADER END*/
+/*BANNER START*/
+  .fondo__degrade {
+    top: 30%;
+    height: 300px; 
+    padding-top: 25px; 
+    border-radius: 100px 0 0 0;     
+  }
+  .fondo__degrade p{
+    width: 50%;
+  }
+  .cuadrito{
+    position: absolute;
+    right: 8%;
+    bottom: -15%;
+    transform: scale(0.7);
+  }
+/*BANNER END*/
+
+/*SECTION 1 START*/
+.texto__about__us {
+  top: 26.5%;
+  left: 5%;
+}
+.about__us p {
+  margin-left: 40%;
+  width: 45%;
+}
+/*SECTION 2 END*/
+
+/*SECTION 2 START*/
+.section2{
+  bottom: 40px;
+}
+.section2 p{
+  width: 47%;
+}
+.section2__img{
+  width: 100%;
+}
+.section2__linea1{
+  position: absolute;
+  width: 150px;
+  height: 199.02px;
+  border-radius: 60px 0 0 0;
+  outline: 1px solid #EBD398;
+  top: 34% !important;
+  right: 20%;
+}
+.section2__linea2{
+  position: absolute;
+  width: 150px;
+  height: 199.02px;
+  border-radius: 60px 0 0 0;
+  outline: 1px solid #EBD398;
+  top: 15% !important;
+  right: 6%;
+}
+.cupcake__torta{
+  transform: scale(0.55) translate(-200px, -260px);
+}
+  /*SECTION 2 END*/
+
+  /*SECTION 3 START*/
+.section3{
+  bottom: 360px;
+}
+.section3--div{  
+  right: 10%;  
+  margin: 8% 5%;
+  margin-left: 12%;
+  border-radius: 60px 0 60px 0;
+  outline: 1px solid #EBD398;
+  padding: 60px 40px 60px;
+}
+.estilo--img{
+  top: -150px;
+  left: -10%;
+  border-radius: 60px 0 60px 0px;
+}
+.section3__pastel{
+  transform: scale(0.5);
+}
+
+  /*SECTION 3 END*/
+
+  /*GALLERY START*/
   .section3__galery{
     grid-template-columns: repeat(2, 1fr);
   }
@@ -391,6 +483,10 @@ p {
   .section3--esquina4{
     border-radius: 100px 0 0 0 ;
   }
+  /*GALLERY END*/
+
+ 
+
 
 }
 .section4 {  
