--- a/styles.css
+++ b/styles.css
@@ -152,11 +152,11 @@ p {
 }
 
 /*espacio entre el banner y el titulo de capriccio y delizia*/
-.section1__about__us  {
+.about__us__section1  {
   margin: 10% 0%;
   margin-bottom: -3%;
 }
-.moronitas {
+.about__us__moronitas {
   /*position: absolute;*/
   transform: translate(-50%,-50%);
   left: 50%;
@@ -165,7 +165,7 @@ p {
 /*.about__us h1{
   margin-left: 14.2%;
 }*/
-.section1__about__us  h1 {
+.about__us__section1  h1 {
   margin-left: 14.2%;
   font-size: 5.2em;
   font-family: 'Playfair Display', serif;
@@ -173,27 +173,27 @@ p {
   color: #FFF;
 }
 /*estilo titulo de capriccio y delizia*/
-.section1__about__us  h2{
+.about__us__section1  h2{
   text-align: center;
   font-size: 2.18em;
   font-family: 'Abril Fatface', cursive;
   font-weight: 200;
   color: #EBD398;  
 }
-.section1__about__us  p {
+.about__us__section1  p {
   margin-left: 36%;
   width: 42%;
 }
-.text__about__us {
-  top: 37%;
+.about__us__text {
+  top: 36%;
   left: 13%;
 }
 
 
-.section2__Exquisite__hapiness{
+.Exquisite__hapiness__section2{
   bottom: 0px;
 }
-.section2__Exquisite__hapiness a{
+.Exquisite__hapiness__section2 a{
   padding: 10px 15px;
   outline: 2px solid #EBD398;
   color:#EBD398;
@@ -202,22 +202,22 @@ p {
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
 }
-.section2__Exquisite__hapiness p{
+.Exquisite__hapiness__section2 p{
   padding-bottom: 35px;
   width: 44%;
 }
-.section2__img{
-  opacity: 80%;
-  width: 100%gti;
+.Exquisite__hapiness__background{
+  opacity: 60%;
+  width: 100%;
 }
-.section2__Exquisite__hapiness div{
-  top: 150px;
-  margin-left: 14.5%;
+.Exquisite__hapiness__section2 div{
+  top: 120px;
+  margin-left: 15%;
 }
-.section2__Exquisite__hapiness img{
+.Exquisite__hapiness__section2 img{
   border-radius: 60px 0 0 0;
 }
-.section2__linea1{
+.Exquisite__hapiness__linea1{
   position: absolute;
   width: 245px;
   height: 326px;
@@ -226,10 +226,10 @@ p {
   top: 23% !important;
   right: 25%;
 }
-.cupcake__torta{
-  transform: scale(0.8) translate(-70px, -89px);
+.section2__cupcake__torta{
+  transform: scale(0.7) translate(-175px, -140px);
 }
-.section2__linea2{
+.Exquisite__hapiness__linea2{
   position: absolute;
   width: 245px;
   height: 326px;
@@ -239,15 +239,21 @@ p {
   right: 10%;
 }
 
-.section3__some__products{
+
+
+
+.Our__products__section3{
   bottom: 650px;
 }
-.cakeTitle__img--style{
+.title__img--style{
   margin: 0 25px;
   top: -115px;
   border-radius: 60px 0 60px 0px;
 }
-.section3--div--title{  
+.Our__products__title__Img{
+  transform: scale(0.7);
+}
+.Our--products--div--title{  
   right: 10%;  
   margin: 5% 8%;
   margin-left: 12%;
@@ -255,17 +261,14 @@ p {
   outline: 1px solid #EBD398;
   padding: 80px 50px 100px;
 }
-.section3__textDetails--title{
-  margin-left: 40%; 
+.Our--products--titleDetails{
+  margin-left: 38%; 
 }
-.section3__img__cakeTitle{
-  transform: scale(0.72);
-}
-.section3--div2--obtionsProducts{
+/*.Our--products--Products--div2{
   margin: 0 35%;
   justify-content: space-around;  
 }
-.section3__some__products button{
+.Our__products__section3 button{
   text-decoration: none;
   font-size: 1.1em;
   font-family: 'Playfair Display', serif;
@@ -281,41 +284,80 @@ p {
   border-radius: 20px;  
   color: #DF9146;
 }
-.section3__some__products a{
+.Our__products__section3 a{
   padding: 10px 15px;
   outline: 2px solid #EBD398;
   color:#EBD398;
   text-decoration: none;
   font-size: .75em;
   font-family: 'Open Sans', sans-serif;
-  font-weight: 700;
-  
+  font-weight: 700;  
 }
 .section3__seeMore{
   margin-top: 10px;
   text-align: center;
   justify-content: center;
   width: 100%;
-}
-.section3__galery{
+}*/
+.Our__products__gallery-container{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 400px;
-  padding: 5% 15%; 
-  grid-gap: 20px;
+  grid-auto-rows: 350px;
+  padding: 5% 18%; 
+  grid-gap: 40px;
 }
-.galery__img{
+.gallery__img{
   width: 100%;
-  height: 100%;  
+  height: 90%;  
   object-fit: cover;
 }
-.galery__item:nth-child(2){
+.gallery__item{
+  overflow: hidden;
+}
+.gallery__item img{
+  transition: transform .5s ease;  
+}
+.gallery__item::before{
+  z-index: 2;
+  content: '';
+  display: block;
+  position: absolute;
+  height: 0%;
+  width: 100%;
+  bottom: 0;
+  transition: height 0.5s ease-out;
+  background: linear-gradient(0deg, rgba(95,45,18,1) 0%, rgba(95,45,18,0.3225665266106442) 28%, rgba(95,45,18,0) 85%);
+}
+.gallery__item:hover img{
+  transform: scale(1.2);
+}
+.gallery__item:hover::before{
+  height: 100%;  
+}
+.gallery__img__name{
+  z-index: 3;  
+  position: absolute;
+  bottom: -10%;
+  text-align: center;
+  width: 100%;
+  transition: bottom .5s ease;
+  font-size: 1.2em;
+  font-family: 'Open Sans', sans-serif;
+  font-weight:400;
+  color:#EBD398;
+}
+
+.gallery__item:hover h2{  
+  bottom: 8%;  
+}
+/*
+.gallery__item:nth-child(2){
   grid-column-start: span 2;
 }
-.galery__item:nth-child(3){
+.gallery__item:nth-child(3){
   grid-column-start: span 2;
 }
-.galery__item:nth-child(6){
+.gallery__item:nth-child(6){
   grid-column-start: span 2;
 }
 .section3--esquina1{
@@ -330,44 +372,7 @@ p {
 .section3--esquina4{
   border-radius: 0 0 0 100px;
 }
-.galery__item{
-  overflow: hidden;
-}
-.galery__item img{
-  transition: transform .5s ease;  
-}
-.galery__item::before{
-  z-index: 2;
-  content: '';
-  display: block;
-  position: absolute;
-  height: 0%;
-  width: 100%;
-  bottom: 0;
-  transition: height 0.5s ease-out;
-  background: linear-gradient(0deg, rgba(95,45,18,1) 0%, rgba(95,45,18,0.3225665266106442) 28%, rgba(95,45,18,0) 85%);
-}
-.galery__item:hover img{
-  transform: scale(1.2);
-}
-.galery__item:hover::before{
-  height: 100%;  
-}
-.galery__nombre{
-  z-index: 3;  
-  position: absolute;
-  bottom: -10%;
-  text-align: center;
-  width: 100%;
-  transition: bottom .5s ease;
-  font-size: 1.2em;
-  font-family: 'Open Sans', sans-serif;
-  font-weight:400;
-  color:#EBD398;
-}
-.galery__item:hover h2{  
-  bottom: 8%;  
-}
+*/
 
 
 
