--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ ul {
   list-style: none;
 }
 h2 {
-  font-size: .9em;
+  font-size: .8em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   color: #EBD398;
@@ -47,6 +47,17 @@ p {
 .aling-items-center {
   align-items: center;
 }
+/*clase utilitaria*/
+.position--relative {
+  position: relative;
+}
+/*clase utilitaria*/
+.position--absolute {
+  position: absolute;  
+}
+.text--details{
+  margin-left: 10%;
+}
 /*acomodacion de todo el menu*/
 .nav {
   z-index: 2;
@@ -66,7 +77,7 @@ p {
 }
 /*margen entre cada uno de los elementos del menu*/
 .menu__item {
-  margin: 0 15px;
+  margin: 0 10px;
   padding: 5px 5px;
 }
  .menu__icon{
@@ -87,6 +98,7 @@ p {
   height: 20px;   
 }
 
+ /*BANNER*/
 .banner__img {
   object-fit: cover;
   top: 20%;
@@ -97,29 +109,21 @@ p {
   justify-content: center;
   position: absolute;
   width: 88%;
-  top: 27%;
+  top: 165px;
   left: 10px;
   margin: 0 5%;
-  height: 400px;    
+  height: 380px;    
   display: flex;
   border-radius: 120px 0 0 0;
   outline: 1px solid #EBD398;
   background: linear-gradient(90deg, rgba(21,11,1,1) 10%, rgba(21,11,1,0.8743872549019608) 45%, rgba(21,11,1,0.16010154061624648) 100%);
 }
 
-.position--relative {
-  position: relative;
-}
-.position--absolute {
-  position: absolute;  
-}
-.text--details{
-  margin-left: 10%;
-}
 
+/*SQUARE*/
 .next__event__square{
   position: absolute;
-  right: 15%;
+  right: 12%;
   bottom: -55px;
 }
 .absolute--square {
@@ -132,7 +136,7 @@ p {
   width: 80%;
   padding-bottom: 25px;
   margin-left: 20%;
-  font-size: 1.5em;
+  font-size: 1.4em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   color: #3a3e49;
