--- a/css/shopCake.css
+++ b/css/shopCake.css
@@ -179,12 +179,14 @@
 
 .cake_gallery_container{
   bottom: 1250px;
+  
 }
 .cake_gallery_container{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 350px;
   padding: 12%;  
+  
 }
 .specialties__section1 a{  
   padding: 10px 15px;
@@ -202,6 +204,45 @@
   width: 100%;
 }
 
+.category{
+  margin-top: 0;
+}
+
+.products{
+  /* display: flex; */
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.product{
+  width: 200px;
+  display: block;
+  margin-bottom: 15px;
+
+}
+
+.loader {
+  border: 8px solid #f3f3f37c; /* Light grey */
+  border-top: 8px solid #EBD398; /* Blue */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+
+  top: 50%;
+  transform: translate(-50%);
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 
 
 
@@ -211,7 +252,7 @@
   flex-flow: row wrap;
   padding: 30px 30px 20px 30px;
   color: #2f2f2f;
-  margin-top: -95%;
+  /* margin-top: -95%; */
 }
 
 .footer > * {
