the shop page stoped working

--- a/css/shopCake.css
+++ b/css/shopCake.css
@@ -10,10 +10,10 @@
     background-color: #150b01;
   }
   
-  button {
+  /*button {
     background-color: transparent;
     border: none;
-  }
+  }*/
   
   ul {
     list-style: none;
